opam-version: "1.2"
name: "webmachine"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-webmachine"
dev-repo: "https://github.com/inhabitedtype/ocaml-webmachine.git"
bug-reports: "https://github.com/inhabitedtype/ocaml-webmachine/issues"
build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]
depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "calendar" {>= "2.03.2"}
  "cohttp" {>= "0.21.0"}
  "dispatch" {>= "0.3.0"}
  "ounit" {test & >= "1.0.2"}
  "re" {>= "1.3.0"}
]
available: [ ocaml-version >= "4.02" ]
